--- a/src/app/support/support.component.scss
+++ b/src/app/support/support.component.scss
@@ -10,3 +10,19 @@
     }
 }
 
+
+@media screen and (max-width: 950px) {
+    .support-items .item-text {
+        display: contents;
+    }
+
+    .col-right {
+        padding-top: 10px;
+    }
+
+    .header-icon-div {
+        padding-bottom: 4rem !important;
+    }
+
+    /* Other styles specific for small screens */
+}
