--- a/src/app/gis-services/gis-services.component.html
+++ b/src/app/gis-services/gis-services.component.html
@@ -69,7 +69,7 @@
                                     and spatial applications. </p>
                                 <h5>MORE ADVANCED GIS SERVICES ARE REGULARLY USED BY SEVERAL GOVERNMENT AGENCIES,
                                     INDUSTRIES AND COMPANIES SUCH AS</h5>
-                                <div class="pl-3 pr-3 pt-4 pb-1">
+                                <div class="pl-3 pr-3 pt-4 pb-1 support-items">
                                     <div *ngFor="let item of gisItems" data-aos="zoom-in" class="row pb-2">
                                         <div class="col-lg-12">
                                             <div class="card card-lift--hover shadow border-0 p-2">
@@ -77,7 +77,7 @@
                                                     <i class="ni ni-bold-right"></i>
                                                 </div>
                                                 <span
-                                                    class="text-capitalize ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
+                                                    class="item-text text-capitalize ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
                                                     {{ item }} </span>
                                             </div>
                                         </div>
@@ -106,7 +106,7 @@
                                     foundation for Photogrammetry mapping, and we have executed numerous projects over
                                     varied applications.</p>
                                 <h5>SERVICES OFFERED INCLUDE </h5>
-                                <div class="pl-3 pr-3 pt-4 pb-1">
+                                <div class="pl-3 pr-3 pt-4 pb-1 support-items">
                                     <div *ngFor="let item of dpItems" data-aos="zoom-in" class="row pb-2">
                                         <div class="col-lg-12">
                                             <div class="card card-lift--hover shadow border-0 p-2">
@@ -114,7 +114,7 @@
                                                     <i class="ni ni-bold-right"></i>
                                                 </div>
                                                 <span
-                                                    class="text-capitalize ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
+                                                    class="item-text text-capitalize ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
                                                     {{ item }} </span>
                                             </div>
                                         </div>
@@ -179,7 +179,7 @@
 
                                 <h5>WE ARE FOCUSED ON APPLICATIONS INVOLVING OUR EXPERTISE AND EXPERIENCE, WHICH ARE
                                 </h5>
-                                <div class="pl-3 pr-3 pt-4 pb-1">
+                                <div class="pl-3 pr-3 pt-4 pb-1 support-items">
                                     <div *ngFor="let item of uavItems" data-aos="zoom-in" class="row pb-2">
                                         <div class="col-lg-12">
                                             <div class="card card-lift--hover shadow border-0 p-2">
@@ -187,7 +187,7 @@
                                                     <i class="ni ni-bold-right"></i>
                                                 </div>
                                                 <span
-                                                    class="text-capitalize ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
+                                                    class="item-text text-capitalize ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
                                                     {{ item }} </span>
                                             </div>
                                         </div>
@@ -219,7 +219,7 @@
                                     on time deliveries..
                                 </p>
                                 <h5>APPLICATIONS ARE </h5>
-                                <div class="pl-3 pr-3 pt-4 pb-1">
+                                <div class="pl-3 pr-3 pt-4 pb-1 support-items">
                                     <div *ngFor="let item of alItems" data-aos="zoom-in" class="row pb-2">
                                         <div class="col-lg-12">
                                             <div class="card card-lift--hover shadow border-0 p-2">
@@ -227,7 +227,7 @@
                                                     <i class="ni ni-bold-right"></i>
                                                 </div>
                                                 <span
-                                                    class="text-capitalize ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
+                                                    class="item-text text-capitalize ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
                                                     {{ item }} </span>
                                             </div>
                                         </div>
@@ -284,7 +284,7 @@
                                             type="text">
                                     </div>
                                     <div *ngIf="requiredForm.controls['name'].invalid && requiredForm.controls['name'].touched"
-                                        class="alert alert-danger p-2 pl-3">
+                                        class="pl-1 color-alert">
                                         <div *ngIf="requiredForm.controls['name'].errors.required">
                                             Name is required.
                                         </div>
@@ -299,7 +299,7 @@
                                             type="email">
                                     </div>
                                     <div *ngIf="requiredForm.controls['email'].invalid && requiredForm.controls['email'].touched"
-                                        class="alert alert-danger p-2 pl-3  mt-3">
+                                        class="pl-1 color-alert mt-3">
                                         <div *ngIf="requiredForm.controls['email'].errors.required; else elseBlock">
                                             Email is required.
                                         </div>
@@ -317,7 +317,7 @@
                                             formControlName="phoneNumber" name="phone">
                                     </div>
                                     <div *ngIf="requiredForm.controls['phoneNumber'].invalid && requiredForm.controls['phoneNumber'].touched"
-                                        class="alert alert-danger p-2 pl-3  mt-3">
+                                        class="pl-1 color-alert mt-3">
                                         <div
                                             *ngIf="requiredForm.controls['phoneNumber'].errors.required; else elseBlock">
                                             Telephone Number is required.
@@ -336,12 +336,12 @@
                                             id="exampleFormControlTextarea1" placeholder="Message"></textarea>
                                     </div>
                                     <div *ngIf="requiredForm.controls['message'].invalid && requiredForm.controls['message'].touched"
-                                        class="alert alert-danger p-2 pl-3 mt-3">
+                                        class="pl-1 color-alert mt-3">
                                         <div *ngIf="requiredForm.controls['message'].errors.required; else elseBlock">
                                             Message is required.
                                         </div>
                                         <ng-template #elseBlock>
-                                            Please enter minimum 5 characters.
+                                            Please enter minimum 10 characters.
                                         </ng-template>
                                     </div>
                                 </div>
@@ -354,7 +354,7 @@
                                                     By using this form you agree with the storage and handling of your
                                                     data by this website.</span></label>
                                         </div>
-                                        <div class="alert alert-danger p-2 pl-3 mt-3"
+                                        <div class="pl-1 color-alert mt-3"
                                             *ngIf="requiredForm.get('agreementChecked').invalid && requiredForm.get('agreementChecked').touched">
                                             You must agree to the terms and conditions.
                                         </div>
