--- a/src/app/it-consulting/it-consulting.component.html
+++ b/src/app/it-consulting/it-consulting.component.html
@@ -23,7 +23,7 @@
                     <div data-aos="zoom-out" class="row row-grid">
                         <div class="card card-lift--hover shadow border-0">
                             <div class="card-header">
-                                <div>
+                                <div class="header-icon-div">
                                     <span class="icon icon-shape bg-gradient-white shadow rounded-circle text-primary">
                                         <i class="fa fa-laptop"></i>
                                     </span>
@@ -78,7 +78,7 @@
 
     <section class="section section-lg pt-5">
         <div class="container">
-            <div class="row justify-content-center">
+            <div class="row row-grid justify-content-center">
                 <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="100">
                     <div class="card card-lift--hover shadow border-0 height-100">
                         <div class="card-body py-5">
