--- a/src/app/job-info/job-info.component.scss
+++ b/src/app/job-info/job-info.component.scss
@@ -8,14 +8,10 @@
 }
 
 
-
 @media screen and (max-width: 950px) {
-    .support-items .item-text {
-        display: contents;
-    }
-
-    .col-right {
+    #resume {
         padding-top: 10px;
+        padding-left: 0px !important;
     }
 
     .header-icon-div {
