--- a/src/app/it-project-services/it-project-services.component.html
+++ b/src/app/it-project-services/it-project-services.component.html
@@ -23,7 +23,7 @@
                     <div data-aos="zoom-out" class="row row-grid">
                         <div class="card card-lift--hover shadow border-0">
                             <div class="card-header">
-                                <div>
+                                <div class="header-icon-div">
                                     <span class="icon icon-shape bg-gradient-white shadow rounded-circle text-primary">
                                         <i class="fa fa-laptop"></i>
                                     </span>
