--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -44,13 +44,13 @@
             <i class="ni ni-bold-down"></i>
             <span class="nav-link-inner--text">Services</span>
           </a>
-          <div class="dropdown-menu">
+          <div class="dropdown-menu p-0">
             <a [routerLink]="['/it-consulting']" routerLinkActive="active-link"
-              class="shadow-lg--hover dropdown-item">IT Consulting Services</a>
-            <a [routerLink]="['/it-project']" routerLinkActive="active-link" class="shadow-lg--hover dropdown-item">IT
+              class="p-3 shadow-lg--hover dropdown-item">IT Consulting Services</a>
+            <a [routerLink]="['/it-project']" routerLinkActive="active-link" class="p-3 shadow-lg--hover dropdown-item">IT
               Project Services</a>
             <a [routerLink]="['/gis-services']" routerLinkActive="active-link"
-              class="shadow-lg--hover dropdown-item">GIS Services</a>
+              class="p-3 shadow-lg--hover dropdown-item">GIS Services</a>
           </div>
         </li>
 
@@ -91,10 +91,10 @@
             <i class="ni ni-bold-down"></i>
             <span class="nav-link-inner--text">Our Catalogue</span>
           </a>
-          <div class="dropdown-menu">
+          <div class="dropdown-menu p-0">
             <a [routerLink]="['/our-portfolio']" routerLinkActive="active-link"
-              class="shadow-lg--hover dropdown-item">Our Portfolio</a>
-            <a [routerLink]="['/our-jobs']" routerLinkActive="active-link" class="shadow-lg--hover dropdown-item">Our
+              class="p-3 shadow-lg--hover dropdown-item">Our Portfolio</a>
+            <a [routerLink]="['/our-jobs']" routerLinkActive="active-link" class="p-3 shadow-lg--hover dropdown-item">Our
               Jobs</a>
           </div>
         </li>
