FIlter changes in our jobs

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,7 +50,7 @@
                   <p class="ns-fs-11 description mt-3">With the right services NascentTechnologies provides advantages
                     to the
                     clients in terms of scalability, risk mitigation, cost efficiency and core focusing</p>
-                  <a href="javascript:void(0)" class="btn btn-primary mt-4">Learn more</a>
+                  <a [routerLink]="['/it-consulting']" class="btn btn-primary mt-4">Learn more</a>
                 </div>
               </div>
             </div>
@@ -64,7 +64,7 @@
                   <p class="ns-fs-11 description mt-3">NascentTechnologies undertakes Projects from the clients both on
                     and off
                     shore, by understanding the current scenario and the technology available.</p>
-                  <a href="javascript:void(0)" class="btn btn-success mt-4">Learn more</a>
+                  <a [routerLink]="['/gis-services']" class="btn btn-success mt-4">Learn more</a>
                 </div>
               </div>
             </div>
@@ -164,7 +164,7 @@
                       fully integrated part of your business.
                       Our teams are managed through SLAs and KPIs to ensure the highest degree of excellence throughout
                       your project.</p>
-                    <a href="javascript:void(0)" class="text-success">Learn more</a>
+                    <!-- <a href="javascript:void(0)" class="text-success">Learn more</a> -->
                   </div>
                 </div>
               </div>
@@ -187,7 +187,7 @@
                       engineers, to serve either in a consulting role or work as a fully integrated part of your
                       business.
                     </p>
-                    <a href="javascript:void(0)" class="text-warning">Learn more</a>
+                    <!-- <a href="javascript:void(0)" class="text-warning">Learn more</a> -->
                   </div>
                 </div>
               </div>
@@ -210,7 +210,7 @@
                       sooner of your new or upgraded platform. We’ll bring our expertise and experience to make sure the
                       risk is minimized and the project goes as smoothly as possible.
                     </p>
-                    <a href="javascript:void(0)" class="text-warning">Learn more</a>
+                    <!-- <a href="javascript:void(0)" class="text-warning">Learn more</a> -->
                   </div>
                 </div>
               </div>
@@ -233,7 +233,7 @@
                       running smoothly and efficiently on your behalf. We can perform scheduled health checks on your
                       servers and other hardware to reduce the potential for breakdown.
                     </p>
-                    <a href="javascript:void(0)" class="text-warning">Learn more</a>
+                    <!-- <a href="javascript:void(0)" class="text-warning">Learn more</a> -->
                   </div>
                 </div>
               </div>
